/*
 * $Id: ChangeLog,v 1.1001 2003/05/06 08:31:31 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-05-06 10:50 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * source/rtl/set.c
    ! Fixed very serious bug in set(_SET_ALTFILE, "") and
      set(_SET_EXTRAFILE, "") which can caused corrupting any files
      open by xHarbour compiled program

2003-05-06 11:02 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/empty.c
    ! check for HB_IT_POINTER was not present, so any "pointer" kind
      variable returned .T. in Empty() checks. Fixed.

  * source/vm/inet.c
    ! In InetRecvEndBlock() if timeout expired witout reading, detection
      of the error was faulty; fixed.

  * source/vm/macro.c
    ! In hb_macroSetValue() a loop to trim the trailing space was done
      NOT on the variable holding the macro code, but on the NON
      INITIALIZED space where the variable would have been copied. Fixed.

2003-05-05 20:54 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed strotrim() to accept '[' as string delimiter when immediatly following a RETURN keyword.

2003-05-05 20:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/tbrowse.prg
    ! minor fix to Tbmouse() function

2003-05-02 09:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/macro.c
    ! Fixed hb_compGenPushSymbol() to verify that an existing symbol is indeed a function
      as opposed to a Memvar (Clipper compatibility).

2003-05-01 11:06 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rdd/dbfntx/dbfntx1.c
    ! Small fix to dbfntx
    ! Also set error level to error object when file is not successfully open (clipper compatible)
  * source/rdd/rdd/dbf1.c
    ! When Open of Dbf file fail, release memory of Filename(this avoid GPF) (   hb_xfree( pArea->szDataFileName ));